# ot-harjoitustyo

./: .coverage  README.md
app/: .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
app/docs/: architechture.md  changelog.md  requirementspecification.md  timemanagement.md
app/src/: app.py  main.py
app/src/gui/: loginui.py  main.py  main_gui.py  main_interface.ui  res.py  res_rc.py  style.json
app/src/sandbox/pysidetest/: main.py
app/src/sandbox/pysidetest/circular_progress/: circular_progress.py
app/src/tests/: main_test.py
app/src/utils/: hough_lines.py
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe-v2/src/: index.py  kassapaate.py  lounas.py  maksukortti.py
laskarit/viikko2/unicafe-v2/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko2/unicafe/src/: index.py  kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: README.md
