[tool.poetry]
name = "app"
version = "0.1.0"
description = "Uni project"
authors = ["Niklas Harju <niklas.harju@helsinki.fi>"]
license = "LGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
invoke = "^1.7.3"
qt-pyqt-pyside-custom-widgets = "^0.6.3"
pyside2 = "^5.15.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
pylint = "^2.15.7"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
