[tool.poetry]
name = "maksukortti"
version = "0.1.0"
description = "viikko2 OhTe"
authors = ["Niklas Harju <niklas.harju@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
